ALL PROFILE CHANGES
Added Logos, and view establishment, and changed reviews of other-profile

--- a/other-profile.css
+++ b/other-profile.css
@@ -153,9 +153,11 @@ color: #4D2D18 ;
 color: #20683D;
 }
 
-.logo {
-width: 100px;
-height: 100px;
+.logo{
+    position:absolute;
+    left:10px;
+    height: 80px;
+    width: 80px;
 }
 
 .web-name {
@@ -446,7 +448,7 @@ background-position: center center;
     display: flex; 
 }
 
-.prelude {
+.review1 {
     position: relative;
     border-radius: 20px;
     height: 250px;
@@ -484,7 +486,7 @@ background-position: center center;
     display: flex; 
 }
 
-.dripkofi {
+.review2 {
     position: relative;
     border-radius: 20px;
     height: 250px;
@@ -522,7 +524,7 @@ background-position: center center;
     display: flex; 
 }
 
-.starbucks {
+.review3 {
     position: relative;
     border-radius: 20px;
     height: 250px;
