--- a/review.css
+++ b/review.css
@@ -461,3 +461,43 @@ ul li:not(:last-child)::after{
     transition: background-color 0.3s ease; 
     z-index: 10;
 }
+
+.make-a-review {
+    width: 800px;
+    height: 400px;
+    border-radius: 15px;
+    background-color: #cbaf91;
+    padding: 15px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    z-index: 1;
+    margin-bottom: 30px;
+    font-family: 'Poppins', sans-serif;
+}
+
+.make-a-review button {
+    width: 100px;
+}
+
+.make-a-review textarea {
+    width: 100%; 
+    height: 100px; 
+    resize: none; 
+    padding: 8px; 
+    box-sizing: border-box;
+}
+
+.make-a-review hr {
+    color: #20683D;
+    height: 3px; 
+    width: 100%;
+    border: none; 
+    background-color: #20683D;
+    margin: 1px 0; 
+}
+
+.make-a-review #review-title {
+    margin-top: -5px;
+}
