--- a/review.css
+++ b/review.css
@@ -6,6 +6,7 @@ body {
     justify-content: center;
     flex-direction: column;
     background-color: rgb(237, 210, 174);
+    overflow-x: hidden;
 }
 
 .header {
@@ -124,8 +125,6 @@ body {
     font-family: 'Poppins', sans-serif;
 }
 
-
-
 #unit1-background2 {
     height: 33%;
     display: flex;
@@ -134,7 +133,7 @@ body {
     -moz-border-radius: 15px;
     margin: -15px;
     padding: 15px;
-    background-image: url(https://img.restaurantguru.com/r858-Asterisko-Artisan-Coffee-interior.jpg);
+    background-image: url("images/cloudscape.png");
     background-size: 100%;
     background-position: center;
     font-family: 'Poppins', sans-serif;
@@ -190,7 +189,7 @@ body {
     -moz-border-radius: 15px;
     margin: -15px;
     padding: 15px;
-    background-image: url(https://scontent.fmnl30-1.fna.fbcdn.net/v/t31.18172-8/15895599_10154508024013462_9171414430509699774_o.jpg?_nc_cat=102&ccb=1-7&_nc_sid=7f8c78&_nc_ohc=i2cgbz3ZBZEAX9Pqs7q&_nc_ht=scontent.fmnl30-1.fna&oh=00_AfD-_Q6ZqveqaXVfaIcTMg44RfUgER9_sTrTvzZJEiWa4Q&oe=65F391C7);
+    background-image: url("images/starbs.png");
     background-size: 100%;
     background-position: top;
     font-family: 'Poppins', sans-serif;
@@ -406,7 +405,6 @@ ul li:not(:last-child)::after{
     opacity: .98;
 }
 
-
 .navbar {
     width: 100%;
     height: 30px;
@@ -419,7 +417,6 @@ ul li:not(:last-child)::after{
     transition: background-color 0.3s ease; 
     z-index: 10; 
 }
-
 
 .navbar a {
     font-size: medium;
